--- a/src/App.css
+++ b/src/App.css
@@ -131,7 +131,6 @@
   object-fit: cover;
   border-radius: 6px;
   height: 30vw;
-  /* width: 30vw; */
   max-height: 200px;
   max-width: 200px;
   min-height: 100px;
@@ -239,7 +238,7 @@
   color: #333;
   font-size: 1.2rem;
   margin: 0 auto;
-  padding: 1.5rem 2rem;
+  padding: 10px;
   border-radius: 0.2rem;
   background-color: rgb(255, 255, 255);
   border: none;
@@ -270,8 +269,8 @@
   color: black;
   text-align: center;
   text-transform: uppercase;
-  font-size: 22px;
-  padding: 20px;
+  font-size: 15px;
+  padding: 10px;
   width: 200px;
   transition: all 0.4s;
   cursor: pointer;
@@ -301,7 +300,7 @@
 }
 
 .error {
-  color: white;
+  color: red;
   text-align: center;
   margin-top: 20px;
 }
